[package]
name = "sgssi_rust_miner"
version = "0.1.0"
edition = "2021"
#authors = "Unai Fernandez <fernandezunai027@gmail.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = "1.1.1"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8.5"
